add preloader js

--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -5,6 +5,7 @@ block variables
     - var titleSite = 'Личный сайт веб-разработчика';
 
 block content
+  include ../common/preloader
   section.section.welcome#auth
     .parallax
       img(src="./assets/images/content/parallax-bg.png", alt="" data-parallax="0.06").parallax__img
