--- a/src/views/auth.layout.pug
+++ b/src/views/auth.layout.pug
@@ -11,7 +11,7 @@ html(lang="en")
     title Portfolio | Welcome page
     link(rel="stylesheet", href="main.min.css")
   body
-    
+    include ./common/preloader
     block content
 
     script(src="bootloader.bundle.js")
