--- a/src/views/components/modules/slider.pug
+++ b/src/views/components/modules/slider.pug
@@ -21,7 +21,7 @@ template#slider-left
     .slider__left
         .slider__info
             .slider__info-title
-                .block-subtitle {{work.title}}
+                .block-subtitle.block-subtitle_slider {{work.title}}
                 hr.slider__info-hr
             transition-group(
                 apper
