--- a/src/views/pages/blog.pug
+++ b/src/views/pages/blog.pug
@@ -9,6 +9,7 @@ block scripts
     script(src='blog.bundle.js')
 
 block content
+    include ../common/preloader
     include ../common/full-menu
     section.section.hero
         include ../common/header
