--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -6,6 +6,7 @@ block variables
 
 block content
   section.section.welcome#auth
+    canvas#pixie
     .parallax
       img(src="./assets/images/content/parallax-bg.png", alt="" data-parallax="0.06").parallax__img
     .intro  
