--- a/src/assets/styles/blocks/index/intro.scss
+++ b/src/assets/styles/blocks/index/intro.scss
@@ -1,47 +1,48 @@
 .intro {
-    width: 380px;
-    height: 395px;
-    border-radius: 15px;
-    position: relative;
-    overflow: hidden;
-    perspective: 1000px;
+  width: 380px;
+  height: 395px;
+  border-radius: 15px;
+  position: absolute;
+  overflow: hidden;
+  perspective: 1000px;
+  z-index: 100;
 }
 
 .intro__welcome,
 .intro__auth {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    transition: 1s;
-    backface-visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  transition: 1s;
+  backface-visibility: hidden;
 }
 
 .intro__welcome {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    background-color: rgba(28, 31, 41, 0.5);
-    transform: rotateY(0deg);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  background-color: rgba(28, 31, 41, 0.5);
+  transform: rotateY(0deg);
 }
 
 .intro__auth {
-    background-color: rgba(28, 31, 41, 0.5);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    border-radius: 15px;
-    transform: rotateY(180deg);
+  background-color: rgba(28, 31, 41, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  border-radius: 15px;
+  transform: rotateY(180deg);
 }
 
 .rotate__auth {
-    transform: rotateY(360deg);
+  transform: rotateY(360deg);
 }
 
 .rotate__welc {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
-.hide{
-    display: none;
+.hide {
+  display: none;
 }
