--- a/src/assets/styles/blocks/index/welcom.scss
+++ b/src/assets/styles/blocks/index/welcom.scss
@@ -1,23 +1,37 @@
 .welcome {
-    background-color: rgb(34, 59, 101);
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: rgb(34, 59, 101);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .parallax {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.parallax__img{
+.parallax__img {
   position: absolute;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   max-width: 110%;
+}
+
+#pixie {
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: -moz-linear-gradient(top, #040429, #257eb7);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0%, #040429),
+    color-stop(100%, #257eb7)
+  );
 }
